using Swipe2Try.Core.Interfaces;
using Swipe2Try.Core.Models;
using Swipe2Try.Core.Validation;
using System.Collections.Generic;
using System.Threading.Tasks;
using System;

namespace Swipe2Try.Core.Managers
{
    public class DishManager
    {
        private readonly IDishRepository _dishRepository;
        private readonly IDishValidator _dishValidator;

        public DishManager(IDishRepository dishRepository, IDishValidator dishValidator)
        {
            _dishRepository = dishRepository ?? throw new ArgumentNullException(nameof(dishRepository));
            _dishValidator = dishValidator ?? throw new ArgumentNullException(nameof(dishValidator));
        }

        public async Task<List<Dish>> GetAllDishesAsync()
        {
            return await _dishRepository.GetAllDishesAsync();
        }

        public async Task<List<Dish>> GetDishesByUserIdAsync(string userId)
        {
            if (string.IsNullOrEmpty(userId))
                throw new ArgumentException("User ID cannot be null or empty", nameof(userId));

            return await _dishRepository.GetDishesByUserIdAsync(userId);
        }

        public async Task<Dish?> GetDishByIdAsync(int id)
        {
            if (id <= 0)
                throw new ArgumentException("Dish ID must be a positive integer", nameof(id));

            return await _dishRepository.GetDishByIdAsync(id);
        }

        public async Task<(bool Success, List<string> Errors)> AddDishAsync(Dish dish)
        {
            try
            {
                // Validate dish
                var validationResult = await _dishValidator.ValidateForCreationAsync(dish);
                if (!validationResult.IsValid)
                    return (false, validationResult.Errors);

                // No need to set ID - it will be auto-generated by the database

                await _dishRepository.AddDishAsync(dish);
                return (true, new List<string>());
            }
            catch (Exception ex)
            {
                return (false, new List<string> { $"Failed to add dish: {ex.Message}" });
            }
        }

        public async Task<(bool Success, string Message)> AddDishWithMessageAsync(Dish dish)
        {
            var result = await AddDishAsync(dish);
            if (result.Success)
            {
                return (true, "Dish created successfully!");
            }
            else
            {
                return (false, string.Join(", ", result.Errors));
            }
        }

        public async Task<(bool Success, List<string> Errors)> UpdateDishAsync(Dish dish)
        {
            try
            {
                // Validate dish
                var validationResult = await _dishValidator.ValidateForUpdateAsync(dish);
                if (!validationResult.IsValid)
                    return (false, validationResult.Errors);

                await _dishRepository.UpdateDishAsync(dish);
                return (true, new List<string>());
            }
            catch (Exception ex)
            {
                return (false, new List<string> { $"Failed to update dish: {ex.Message}" });
            }
        }

        public async Task<(bool Success, string Message)> UpdateDishWithMessageAsync(Dish dish)
        {
            var result = await UpdateDishAsync(dish);
            if (result.Success)
            {
                return (true, "Dish updated successfully!");
            }
            else
            {
                return (false, string.Join(", ", result.Errors));
            }
        }

        public async Task<(bool Success, List<string> Errors)> DeleteDishAsync(int id)
        {
            try
            {
                if (id <= 0)
                    return (false, new List<string> { "Invalid dish ID" });

                await _dishRepository.DeleteDishAsync(id);
                return (true, new List<string>());
            }
            catch (Exception ex)
            {
                return (false, new List<string> { $"Failed to delete dish: {ex.Message}" });
            }
        }

        public async Task<(bool Success, string Message)> DeleteDishWithMessageAsync(int id)
        {
            var result = await DeleteDishAsync(id);
            if (result.Success)
            {
                return (true, "Dish deleted successfully!");
            }
            else
            {
                return (false, string.Join(", ", result.Errors));
            }
        }
    }
}