---
title: "Dish CRUD Operations - Three-Layer Architecture (Create Flow)"
---
classDiagram
    direction TB
      %% UI Layer - Presentation
    class CreateModel {
        -dishManager : DishManager
        -input : Dish
        -validationErrors : List~String~
        +getInput() : Dish
        +setInput(value : Dish) : void
        +getValidationErrors() : List~String~
        +setValidationErrors(errors : List~String~) : void
        +OnGet() : void
        +OnPostAsync() : IActionResult
    }
      %% Core Layer - Business Logic
    class DishManager {
        -dishRepository : IDishRepository
        -dishValidator : IDishValidator
        +getDishRepository() : IDishRepository
        +setDishRepository(repository : IDishRepository) : void
        +getDishValidator() : IDishValidator
        +setDishValidator(validator : IDishValidator) : void
        +GetAllDishesAsync() : List~Dish~
        +GetDishesByUserIdAsync(userId : String) : List~Dish~
        +GetDishByIdAsync(id : int) : Dish
        +AddDishAsync(dish : Dish) : Tuple~boolean, List~String~~
        +UpdateDishAsync(dish : Dish) : Tuple~boolean, List~String~~
        +DeleteDishAsync(id : int) : Tuple~boolean, List~String~~
        +AddDishWithMessageAsync(dish : Dish) : Tuple~boolean, String~
        +UpdateDishWithMessageAsync(dish : Dish) : Tuple~boolean, String~
        +DeleteDishWithMessageAsync(id : int) : Tuple~boolean, String~
    }
      class IDishValidator {
        <<interface>>
        +ValidateForCreationAsync(dish : Dish) : Tuple~boolean, List~String~~
        +ValidateForUpdateAsync(dish : Dish) : Tuple~boolean, List~String~~
    }
    
    class DishValidator {
        +ValidateForCreationAsync(dish : Dish) : Tuple~boolean, List~String~~
        +ValidateForUpdateAsync(dish : Dish) : Tuple~boolean, List~String~~
    }
    
    class IDishRepository {
        <<interface>>
        +GetAllDishesAsync() : List~Dish~
        +GetDishesByUserIdAsync(userId : String) : List~Dish~
        +GetDishByIdAsync(id : int) : Dish
        +AddDishAsync(dish : Dish) : Task
        +UpdateDishAsync(dish : Dish) : Task
        +DeleteDishAsync(id : int) : Task
    }
      class Dish {
        -id : int
        -name : String
        -description : String
        -userId : String
        -healthFactor : int
        -photo : String
        -restaurant : String
        +getId() : int
        +setId(id : int) : void
        +getName() : String
        +setName(name : String) : void
        +getDescription() : String
        +setDescription(description : String) : void
        +getUserId() : String
        +setUserId(userId : String) : void
        +getHealthFactor() : int
        +setHealthFactor(factor : int) : void
        +getPhoto() : String
        +setPhoto(photo : String) : void
        +getRestaurant() : String
        +setRestaurant(restaurant : String) : void
        +Dish()
        +Dish(name : String, description : String, userId : String, healthFactor : int, photo : String, restaurant : String)
    }
    
    %% Domain Models
    class User {
        -userID : String
        -name : String
        -email : String
        -password : String
        -roleID : String
        +getUserID() : String
        +setUserID(id : String) : void
        +getName() : String
        +setName(name : String) : void
        +getEmail() : String
        +setEmail(email : String) : void
        +getPassword() : String
        +setPassword(password : String) : void
        +getRoleID() : String
        +setRoleID(roleID : String) : void
    }
    
    class Role {
        -roleID : String
        -roleName : String
        +getRoleID() : String
        +setRoleID(id : String) : void
        +getRoleName() : String
        +setRoleName(name : String) : void
    }
    
    class LikeDislike {
        -id : int
        -userId : String
        -dishId : int
        -isLike : boolean
        -timestamp : DateTime
        +getId() : int
        +setId(id : int) : void
        +getUserId() : String
        +setUserId(userId : String) : void
        +getDishId() : int
        +setDishId(dishId : int) : void
        +getIsLike() : boolean
        +setIsLike(isLike : boolean) : void
        +getTimestamp() : DateTime
        +setTimestamp(timestamp : DateTime) : void
    }
    
    class RoleManager {
        -userRepository : IUserRepository
        -roleRepository : IRoleRepository
        +getUserRepository() : IUserRepository
        +setUserRepository(repository : IUserRepository) : void
        +getRoleRepository() : IRoleRepository
        +setRoleRepository(repository : IRoleRepository) : void
        +GetUsersByRoleAsync(roleId : String) : List~User~
        +AssignRoleToUserAsync(userId : String, roleId : String) : boolean
        +RemoveRoleFromUserAsync(userId : String) : boolean
        +GetRoleByIdAsync(roleId : String) : Role
    }
    
    class IUserRepository {
        <<interface>>
        +GetUserByIdAsync(userId : String) : User
        +GetUsersByRoleAsync(roleId : String) : List~User~
        +UpdateUserAsync(user : User) : Task
    }
    
    class IRoleRepository {
        <<interface>>
        +GetRoleByIdAsync(roleId : String) : Role
        +GetAllRolesAsync() : List~Role~
    }
      %% DAL Layer - Data Access
    class DishRepository {
        -connectionString : String
        +getConnectionString() : String
        +setConnectionString(connectionString : String) : void
        +GetAllDishesAsync() : List~Dish~
        +GetDishesByUserIdAsync(userId : String) : List~Dish~
        +GetDishByIdAsync(id : int) : Dish
        +AddDishAsync(dish : Dish) : Task
        +UpdateDishAsync(dish : Dish) : Task
        +DeleteDishAsync(id : int) : Task
    }
    
    class SqlConnection {
        <<external>>
        +OpenAsync() : Task
        +ExecuteAsync() : Task
    }
    
    class SqlCommand {
        <<external>>
        +ExecuteReaderAsync() : SqlDataReader
        +ExecuteNonQueryAsync() : int
    }
    
    %% Domain Relationships with Multiplicities
    User "1" --> "1..*" Role : has
    RoleManager "1" --> "0..*" User : manages
    LikeDislike "1" --> "1" User : belongs to
    LikeDislike "1" --> "1" Dish : rates
    User "1" --> "0..*" Dish : creates
    
    %% UI Layer Relationships
    CreateModel "1" --> "1" DishManager : uses
    CreateModel "1" --> "0..*" Dish : handles
    
    %% Core Layer Relationships  
    DishManager "1" --> "1" IDishRepository : depends on
    DishManager "1" --> "1" IDishValidator : depends on
    RoleManager "1" --> "1" IUserRepository : depends on
    RoleManager "1" --> "1" IRoleRepository : depends on
    DishValidator "1" ..|> "1" IDishValidator : implements
    DishRepository "1" ..|> "1" IDishRepository : implements
    
    DishManager "1" --> "0..*" Dish : manages
    DishValidator "1" --> "0..*" Dish : validates
    DishRepository "1" --> "0..*" Dish : persists
    
    %% DAL Layer Relationships
    DishRepository "1" --> "0..*" SqlConnection : uses
    DishRepository "1" --> "0..*" SqlCommand : executes
    
    %% Layer annotations
    note for CreateModel "UI Layer - Razor Page Model"
    note for DishManager "Core Layer - Business Logic"
    note for DishValidator "Core Layer - Validation"
    note for DishRepository "DAL Layer - Data Access"
    
    %% Create Flow Notes
    note for CreateModel "Create Flow:\n1. User submits form\n2. Gets UserId from Claims\n3. Calls DishManager\n4. Handles validation errors\n5. Redirects or shows errors"